--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lasyde",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "homepage": "https://github.com/karbonn/lasyde#readme",
   "keywords": [
     "aws",
@@ -14,6 +14,7 @@
   "description": "Simple CLI to package and tag a lambda function",
   "dependencies": {
     "adm-zip": "^0.4.13",
+    "chalk": "^2.4.2",
     "shelljs": "^0.8.3"
   },
   "main": "./lib/index.js",
